fix japaneseName to ubiquitousName
