# app/interfaces/api/domainmodel/create/CreateDomainModelRequest.scala
@@ -1,7 +1,7 @@
 package interfaces.api.domainmodel.create
 
 import dev.tchiba.sdmt.core.boundedContext.BoundedContextId
-import dev.tchiba.sdmt.core.domainmodel.{EnglishName, JapaneseName, Specification}
+import dev.tchiba.sdmt.core.domainmodel.{EnglishName, UbiquitousName, Specification}
 import dev.tchiba.sdmt.usecase.domainmodel.create.CreateDomainModelInput
 import interfaces.json.{JsonRequest, JsonValidator}
 import play.api.libs.json.{Json, OFormat}
@@ -10,17 +10,17 @@ import play.api.mvc.{BodyParser, PlayBodyParsers}
 import scala.concurrent.ExecutionContext
 
 case class CreateDomainModelRequest(
-    japaneseName: String,
+    ubiquitousName: String,
     englishName: String,
     specification: String
 ) extends JsonRequest {
 
-  private val japName = JapaneseName.validate(japaneseName).leftThrow
+  private val ubiName = UbiquitousName.validate(ubiquitousName).leftThrow
   private val engName = EnglishName.validate(englishName).leftThrow
   private val spec    = Specification(specification)
 
   val input: BoundedContextId => CreateDomainModelInput =
-    CreateDomainModelInput(_, japName, engName, spec)
+    CreateDomainModelInput(_, ubiName, engName, spec)
 }
 
 object CreateDomainModelRequest {
