# app/interfaces/api/domainmodel/update/UpdateDomainModelRequest.scala
@@ -1,7 +1,7 @@
 package interfaces.api.domainmodel.update
 
 import dev.tchiba.sdmt.core.boundedContext.BoundedContextId
-import dev.tchiba.sdmt.core.domainmodel.{DomainModelId, EnglishName, JapaneseName, Specification}
+import dev.tchiba.sdmt.core.domainmodel.{DomainModelId, EnglishName, UbiquitousName, Specification}
 import dev.tchiba.sdmt.usecase.domainmodel.update.UpdateDomainModelInput
 import interfaces.json.{JsonRequest, JsonValidator}
 import play.api.libs.json.{Json, OFormat}
@@ -10,17 +10,17 @@ import play.api.mvc.{BodyParser, PlayBodyParsers}
 import scala.concurrent.ExecutionContext
 
 case class UpdateDomainModelRequest(
-    japaneseName: String,
+    ubiquitousName: String,
     englishName: String,
     specification: String
 ) extends JsonRequest {
 
-  private val updatedJapaneseName  = JapaneseName.validate(japaneseName).leftThrow
-  private val updatedEnglishName   = EnglishName.validate(englishName).leftThrow
-  private val updatedSpecification = Specification(specification)
+  private val updatedUbiquitousName = UbiquitousName.validate(ubiquitousName).leftThrow
+  private val updatedEnglishName    = EnglishName.validate(englishName).leftThrow
+  private val updatedSpecification  = Specification(specification)
 
   val input: (BoundedContextId, DomainModelId) => UpdateDomainModelInput =
-    UpdateDomainModelInput(_, _, updatedJapaneseName, updatedEnglishName, updatedSpecification)
+    UpdateDomainModelInput(_, _, updatedUbiquitousName, updatedEnglishName, updatedSpecification)
 }
 
 object UpdateDomainModelRequest {
