# front/angular-front/src/app/models/domainModel/http/DomainModelResponse.ts
@@ -8,7 +8,7 @@ import {DomainModelId} from "../id/domain-model-id";
 export interface DomainModelResponse {
   id: string,
   boundedContextId: string,
-  japaneseName: string,
+  ubiquitousName: string,
   englishName: string,
   specification: string
 }
@@ -18,7 +18,7 @@ export const DomainModelResponse = {
     return new DomainModel(
       new DomainModelId(res.id),
       new BoundedContextId(res.boundedContextId),
-      new UbiquitousName(res.japaneseName),
+      new UbiquitousName(res.ubiquitousName),
       new EnglishName(res.englishName),
       new Knowledge(res.specification)
     )
