# sdmt-application/src/main/scala/dev/tchiba/sdmt/application/interactors/domainmodel/add/CreateDomainModelInteractor.scala
@@ -21,7 +21,7 @@ class CreateDomainModelInteractor @Inject() (
       case Some(context) =>
         val newDomainModel = DomainModel.create(
           boundedContextId = context.id,
-          japaneseName = input.japaneseName,
+          ubiquitousName = input.ubiquitousName,
           englishName = input.englishName,
           specification = input.specification
         )
