# sdmt-core/src/main/scala/dev/tchiba/sdmt/core/domainmodel/UbiquitousName.scala
@@ -3,34 +3,34 @@ package dev.tchiba.sdmt.core.domainmodel
 import dev.tchiba.sdmt.core.ValueObject
 
 /**
- * ドメインモデルの日本語名
+ * ユビキタス名
  *
  * @param value 1文字以上50文字以下の文字列
  */
-final class JapaneseName private (val value: String) extends ValueObject {
+final class UbiquitousName private (val value: String) extends ValueObject {
 
-  import JapaneseName._
+  import UbiquitousName._
 
   require(valueLengthMustBe1to50(value), requirementErrorMessage(value))
 
   override def equals(other: Any): Boolean = other match {
-    case that: JapaneseName => value == that.value
-    case _                  => false
+    case that: UbiquitousName => value == that.value
+    case _                    => false
   }
 
   override def hashCode(): Int = 31 * value.##
 
-  override def toString = s"DomainModelJapaneseName($value)"
+  override def toString = s"UbiquitousName($value)"
 }
 
-object JapaneseName {
-  def apply(value: String) = new JapaneseName(value)
+object UbiquitousName {
+  def apply(value: String) = new UbiquitousName(value)
 
-  def validate(value: String): Either[String, JapaneseName] =
+  def validate(value: String): Either[String, UbiquitousName] =
     Either.cond(valueLengthMustBe1to50(value), apply(value), requirementErrorMessage(value))
 
   private def requirementErrorMessage(value: String): String =
-    s"DomainModelJapaneseName must between 1 to 50 length, but value length is ${value.length}（$value）"
+    s"UbiquitousName must between 1 to 50 length, but value length is ${value.length}（$value）"
 
   private def valueLengthMustBe1to50(value: String): Boolean = value.nonEmpty && value.lengthIs <= 50
 }
