# sdmt-usecase/src/main/scala/dev/tchiba/sdmt/usecase/domainmodel/create/CreateDomainModelInput.scala
@@ -1,12 +1,12 @@
 package dev.tchiba.sdmt.usecase.domainmodel.create
 
 import dev.tchiba.sdmt.core.boundedContext.BoundedContextId
-import dev.tchiba.sdmt.core.domainmodel.{EnglishName, JapaneseName, Specification}
+import dev.tchiba.sdmt.core.domainmodel.{EnglishName, UbiquitousName, Specification}
 import dev.tchiba.sdmt.usecase.Input
 
 final case class CreateDomainModelInput(
     boundedContextId: BoundedContextId,
-    japaneseName: JapaneseName,
+    ubiquitousName: UbiquitousName,
     englishName: EnglishName,
     specification: Specification
 ) extends Input[CreateDomainModelOutput]
